release 1.13
- Fixed issue 1003
  http://java.net/jira/browse/JERSEY-1003
  Adjusted log level in FieldDescriptor class
- Fixed issue 752
  http://java.net/jira/browse/JERSEY-752
  Exported packages in manifest don't have versions
- Added SubjectSecurityContext to enable subject-based security
  *Added getSecurityContext() method to ContainerRequest*
- Fixed issue 988
  http://java.net/jira/browse/JERSEY-988
  Applied patch which tries to find/access non-public constructor for JAXB beans
  while generating XML Schema to be included in WADL.
- Fixed issue 964
  http://java.net/jira/browse/JERSEY-964
  Making *WebResource.Builders not final to make mocking possible.
- Fixed issue 985
  http://java.net/jira/browse/JERSEY-985
  Non-blocking client now takes ssl settings (via HTTPSPropertins) into account.

release 1.12 (02-2012)
- Fixed issue 671
  http://java.net/jira/browse/JERSEY-671
  Added missing createAircraftType() method to json-from-jaxb sample in JAXB ObjectFactory
- Fixed issue 934
  http://java.net/jira/browse/JERSEY-934
  Added '\n' to ResourceConfig.COMMON_DELIMITERS (to ease params declarations)
- Fixed issue 830
  http://java.net/jira/browse/JERSEY-830
  Fixed issue with WADL generation when dealing with nested generic types; added check before trying to cast Type to Class
- Fixed issue 874
  http://java.net/jira/browse/JERSEY-874
  Added "throws ClientHandlerException" to all methods declared in UniformInterface, same for its successors.
- Fixed issue 883 
  http://java.net/jira/browse/JERSEY-883
  Improved support for CDI Bean manager lookup
- Fixed issue 943
  http://java.net/jira/browse/JERSEY-943
  Fixed archetype jersey-quickstart-grizzly2.
- Fixed issue 907
  http://java.net/jira/browse/JERSEY-906
  Modified documentation (user guide) to reflect current implementation (client filter execution order).
- Fixed issue 906
  http://java.net/jira/browse/JERSEY-906